# DXNativeToFBX

./: .gitignore  CMakeLists.txt  CODIGO_VALIDACION.md  COMENTARIOS_AGREGADOS.md  README.md  build.bat
.same/: ANALISIS_PROBLEMA_112_ANIMACIONES.md  CORRECCIONES_APLICADAS.md  FIXES_SKIN_ANIMATION.md  FIXES_TIME_WINDING.md  todos.md
examples/: convert_examples.bat
include/: Common.h
src/: FBXExporter.cpp  FBXExporter.h  MatrixConverter.cpp  MatrixConverter.h  XFileParser.cpp  XFileParser.h  main.cpp
